# habbit_task_tracker

./: .env  .env.example  README.md  alembic.ini  celery_app.py  docker-compose.yml  main.py  pyproject.toml  scr.py
app/api/: __init__.py
app/api/v_1/: __init__.py  category.py  dashboards.py  task.py
app/cache/: connection.py  service.py
app/clickhouse_migrations/: initial_migration.sql
app/core/: config.py
app/db/: base.py  session.py
app/kafka/: connection.py  producer.py
app/migrations/: env.py
app/migrations/versions/: 20b13fc8738b_first_initial_migration.py  8d92a112b72c_add_nullable_for_category_id.py
app/models/: __init__.py  category.py  mixins.py  task.py
app/repository/: category.py  task.py
app/schemas/: category.py  task.py
app/services/: category.py  clickhouse_service.py  task.py
app/tasks/: notifications.py
app/utils/: depends.py
db/: session.py
models/: backlog.py  category.py  mixins.py  task.py
schemas/: category.py  task.py
